--- a/webapp/view/Ncheader.view.xml
+++ b/webapp/view/Ncheader.view.xml
@@ -422,9 +422,9 @@
                                                             <Input id="idDcIpLblty" showValueHelp="true" valueHelpRequest="onVHReqLiability" change="handleChangeLiability" />
                                                             <TextArea rows="3" width="100%" id="idDiscLbltyTxt" />
                                                         </VBox>
-                                                        <Label text="Partner / Suppilier" />
+                                                        <Label text="Suppilier" />
                                                         <Input id="idDcIpPrtnr" showValueHelp="true" valueHelpRequest="onVHReqPartner" change="handleChangeSupplierName" />
-                                                        <Label text="Partner / Suppilier Name" />
+                                                        <Label text="Suppilier Name" />
                                                         <Input id="idDcIpPrtnrNm" editable="false" />
                                                         <Label text="Supersedes Item" />
                                                         <Input id="idDcIpSpsdsItm" showValueHelp="true" valueHelpRequest="onVHReqSupersedesItem" />
@@ -432,8 +432,8 @@
                                                         <Input id="idDcIpSpsdbyItm" showValueHelp="true" valueHelpRequest="onVHReqSupersededbyItem" />
                                                         <!-- <Label text="Closed Date" />
                                                         <Text id="idDcTxtCdt" text="" /> -->
-                                                        <Label text="2nd Drop Ship" />
-                                                        <CheckBox id="idDcCbDs2" />
+                                                        <!-- <Label text="2nd Drop Ship" />
+                                                        <CheckBox id="idDcCbDs2" /> -->
                                                         <Label text="Aircraft" />
                                                         <Input id="idDiscAircraft" showValueHelp="true" valueHelpRequest="onVHReqAircraft" change="handleChangeDiscAircraft" />
                                                         <Label text="Open Date" />
@@ -1009,7 +1009,8 @@
                                                         <Label text="As Per" />
                                                         <TextArea id="idDcInpAp" />
                                                         <Label text="Incomplete Flag" />
-                                                        <CheckBox id="idDcCbIf" class="sapUiLargeMarginBegin" selected="true" select="handleIncompleteFlagCheck" />
+                                                        <CheckBox id="idDcCbIf" class="sapUiLargeMarginBegin" selected="true" />
+                                                        <!-- select="handleIncompleteFlagCheck" -->
                                                     </f:content>
                                                 </f:SimpleForm>
                                             </l:BlockLayoutCell>
@@ -1060,7 +1061,7 @@
                             </IconTabFilter>
                             <IconTabFilter id="idsingoff" text="Sign Off" key="Signoff" visible="true">
                                 <ScrollContainer height="100%" width="100%" horizontal="false" vertical="true">
-                                    <Table class="formcolor1 sapUiSizeCompact" items="" growing="true" growingThreshold="100" growingScrollToLoad="false" includeItemInSelection="true">
+                                    <Table class="formcolor1 sapUiSizeCompact" items="{oHeaderSingoff>/}" growing="true" growingThreshold="100" growingScrollToLoad="false" includeItemInSelection="true">
                                         <headerToolbar>
                                             <Toolbar>
                                                 <Title text="Header Signoff Sheet" level="H2" />
@@ -1106,33 +1107,17 @@
                                         <items>
                                             <ColumnListItem>
                                                 <cells>
-                                                    <Text text="C3QAMANU" />
+                                                    <Text text="{oHeaderSingoff>WorkGroup}" />
                                                     <!--<Text text=""/>-->
-                                                    <Link text="AB012345" />
+                                                    <Link text="{oHeaderSingoff>User}" />
                                                     <!--<Input value="" liveChange="onEnterText" valueHelpIconSrc="sap-icon://document-text" showValueHelp="true" valueHelpRequest="onNotesChange"/>-->
                                                     <Input />
-                                                    <Input value="RJ" showValueHelp="true" />
-                                                    <Text text="11-Mar-2016 10:26" />
-                                                    <Text text="11-Mar-2016 10:26" />
-                                                    <Text text="11-Mar-2016 10:26" />
-                                                    <Input value="A" showValueHelp="true" />
-                                                    <Input value="Approved" />
-                                                    <Button icon="sap-icon://less" />
-                                                </cells>
-                                            </ColumnListItem>
-                                            <ColumnListItem>
-                                                <cells>
-                                                    <Text text="C3QAMAZU" />
-                                                    <!--<Text text=""/>-->
-                                                    <Link text="XY012345" />
-                                                    <!--<Input value="" liveChange="onEnterText" valueHelpIconSrc="sap-icon://document-text" showValueHelp="true" valueHelpRequest="onNotesChange"/>-->
-                                                    <Input />
-                                                    <Input value="AJ" />
-                                                    <Text text="11-Mar-2016 10:26" />
-                                                    <Text text="11-Mar-2016 10:26" />
-                                                    <Text text="11-Mar-2016 10:26" />
-                                                    <Input value="R" />
-                                                    <Input value="Rejected" />
+                                                    <Input value="{oHeaderSingoff>SignOffNote}" showValueHelp="true" />
+                                                    <Text text="{oHeaderSingoff>ActualStart}" />
+                                                    <Text text="{oHeaderSingoff>ActualStart}{oHeaderSingoff>ActualSTime}" />
+                                                    <Text text="{oHeaderSingoff>FinishDate}{oHeaderSingoff>FinishTime}" />
+                                                    <Input value="{oHeaderSingoff>AR}" showValueHelp="true" />
+                                                    <Input value="{oHeaderSingoff>Comments}" />
                                                     <Button icon="sap-icon://less" />
                                                 </cells>
                                             </ColumnListItem>
